[package]
name = "jam_psx_test"
version = "0.1.0"
edition = "2024"

[features]

[dependencies]
# Bevy
bevy_ptr = { version = "0.16" }
bevy_platform = { version = "0.16", default-features = false, features = ["alloc"] }
bevy_utils = { version = "0.16", default-features = false, features = ["alloc"] }
bevy_math = { version = "0.16", default-features = false, features = ["alloc", "libm"] }
bevy_color = { version = "0.16", default-features = false, features = ["alloc", "libm"] }
bevy_tasks = { version = "0.16", default-features = false }
bevy_ecs = { version = "0.16", default-features = false }
bevy_app = { version = "0.16", default-features = false }
bevy_diagnostic = { version = "0.16", default-features = false }

# Other
derive_more = { version = "2.0.1", default-features = false, features = ["deref", "deref_mut"] }

[dependencies.psx]
path = "./psx-sdk-rs/psx"
features = [
  "heap",
  "critical-section",
]

[dependencies.portable-atomic]
version = "1"
default-features = false
features = [
  "fallback",
  "critical-section",
]

[dependencies.foldhash]
git = "https://github.com/bushrat011899/foldhash"
branch = "portable_atomic"
default-features = false
features = ["portable-atomic"]

[dependencies.futures-core]
version = "0.3"
default-features = false
features = ["portable-atomic"]

[patch.crates-io.foldhash]
git = "https://github.com/bushrat011899/foldhash"
branch = "portable_atomic"
